objects/ssot__SocialMessageEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionId__c</fullName>
        <label>Engagement Action</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Social Engagement Action Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferringSocialNetworkName__c</fullName>
        <label>Referring Social Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialMessageId__c</fullName>
        <label>Social Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialTargetURL__c</fullName>
        <label>Social Target URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSocialInteractionsCount__c</fullName>
        <label>Total Social Interactions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueSocialInteractionsCount__c</fullName>
        <label>Unique Social Interactions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818356530_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialMessageEngagement_SocialMessag_rel</label>
        <referenceTo>ssot__SocialMessage__dlm</referenceTo>
        <relationshipLabel>SocialMessageEngagement_SocialMessag_rel</relationshipLabel>
        <relationshipName>rel_1719818356530_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720024280804_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialMessageEngagement_EngagementAc_rel</label>
        <referenceTo>ssot__EngagementAction__dlm</referenceTo>
        <relationshipLabel>SocialMessageEngagement_EngagementAc_rel</relationshipLabel>
        <relationshipName>rel_1720024280804_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>